[gd_scene load_steps=6 format=3 uid="uid://bf2rbnthj5u7e"]

[ext_resource type="Script" path="res://scenes/characters/enemy.gd" id="1_6dyor"]
[ext_resource type="Texture2D" uid="uid://cr4vj2w7t7roy" path="res://art/Kings and Pigs/Sprites/03-Pig/Idle (34x28).png" id="2_1yq03"]
[ext_resource type="Texture2D" uid="uid://bk4tdujvedh2w" path="res://art/Kings and Pigs/Sprites/10-Cannon/Idle.png" id="3_rljpa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bxl5"]
size = Vector2(18, 17.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lku6s"]
size = Vector2(65, 10)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 8
collision_mask = 5
script = ExtResource("1_6dyor")
speed = 80.0
points = Array[float]([-200.0, 200.0])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8.66667)
texture = ExtResource("2_1yq03")
flip_h = true
region_enabled = true
region_rect = Rect2(11, 11, 18, 17)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.66667)
shape = SubResource("RectangleShape2D_5bxl5")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1.33333)
shape = SubResource("RectangleShape2D_5bxl5")

[node name="FieldOfView" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldOfView"]
position = Vector2(32.3333, -2.33333)
shape = SubResource("RectangleShape2D_lku6s")

[node name="Gun" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(6.5, -4.5)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rljpa")
flip_h = true
region_enabled = true
region_rect = Rect2(17, 7, 24, 18)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="FieldOfView" to="." method="_on_field_of_view_area_entered"]
